2005-09-30  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/hiki_formatter.rb (apply_tdiary_theme): revise
	H2_RE (reported by NISHI Takao).

	* misc/plugin/attach.rb, misc/plugin/category.rb,
	misc/plugin/keyword.rb, misc/plugin/orphan.rb,
	misc/plugin/referer.rb, misc/plugin/sitemap.rb,
	misc/plugin/template.rb, plugin/00default.rb,
	style/default/html_formatter.rb: revise for more strict HTML (by
	KURODA Hiraku).

2005-09-29  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/webrick/hikilet.rb: add a script to run hiki with
	WEBrick (by Kazuhiro NISHIYAMA).

	* style/math/parser.rb, style/math/html_formatter.rb: follow the
	changes of the default style.

	* hiki/xmlrpc.rb: use utf-8 as the input/output charset.
	add 'wiki.getPageInfo'.

	* hiki/util.rb (redirect): always use 'meta refresh' (closes #26).

	* style/default/hikidoc.rb: sync with hikidoc rev.30.
	  allow empty descriptions in definition lists.

2005-09-27  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: sync with hikidoc rev.29.
	  bugfix in parse_plugin.
	  revise URI_RE.

2005-09-26  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/rss-show.rb: use the rss library.

	* style/default/hikidoc.rb: sync with hikidoc rev.27.
	  revise parse_plugin.

2005-09-20  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_link): display
	specified titles in interwikis (closes #25).
	ditto in outer aliases.

	* plugin/00default.rb (toc): return an empty string (closes #24).

2005-09-18  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_auto_link): do nothing
	if @auto_links is empty.
	* style/default/hikidoc.rb: sync with hikidoc rev.25.
	  minimum match in parse_modifier.

2005-09-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb (getAmazon): allow hankaku colon in a
	regexp of an item_name.

2005-09-14  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb: follow-up format changing of amazon.com
	and amazon.co.jp.
